--- a/index.html
+++ b/index.html
@@ -19,6 +19,36 @@
         <a href="#" class="logo">Ecommerce</a>
         <!--carte icon-->
         <i class="bx bx-shopping-bag" id="cart-icon"></i>
+        <!--cart-->
+        <div class="cart">
+          <h2 class="cart-tittle">Your cart</h2>
+          <!--content-->
+          <div class="cart-content">
+            <div class="cart-box">
+              <img
+                src="image/pantalon-chino-slim-twill-stretch-marine-marine-1090885-1-zoom.avif"
+                alt=""
+                class="cart-img"
+              />
+              <div class="detail-box">
+                <div class="cart-production-title">Pantalon</div>
+                <div class="cart-price">$25</div>
+                <input type="number" value="1" class="cart-quantity" />
+              </div>
+              <!--Remove cart-->
+              <i class="bx bxs-trash-alt cart-remove"></i>
+            </div>
+          </div>
+          <!--total-->
+          <div class="total">
+            <div class="total-title">Total</div>
+            <div class="total-price">$0</div>
+          </div>
+          <!--buy buttom-->
+          <button type="button" class="btn-buy">Buy Now</button>
+          <!--cart close-->
+          <i class="bx bx-x" id="close-cart"></i>
+        </div>
       </div>
     </header>
     <!--Shop-->
@@ -156,5 +186,7 @@
         </div>
       </div>
     </section>
+    <!--LINK TO JS-->
+    <script src="index.js"></script>
   </body>
 </html>
