--- a/index.html
+++ b/index.html
@@ -25,18 +25,18 @@
           <!--content-->
           <div class="cart-content">
             <div class="cart-box">
-              <img
+              <!--<img
                 src="image/pantalon-chino-slim-twill-stretch-marine-marine-1090885-1-zoom.avif"
                 alt=""
                 class="cart-img"
               />
               <div class="detail-box">
                 <div class="cart-production-title">Pantalon</div>
-                <div class="cart-price">$25</div>
+                <div class="cart-price">$25.05</div>
                 <input type="number" value="1" class="cart-quantity" />
               </div>
               <!--Remove cart-->
-              <i class="bx bxs-trash-alt cart-remove"></i>
+              <!--<i class="bx bxs-trash-alt cart-remove"></i>-->
             </div>
           </div>
           <!--total-->
